# color_separation

./: .gitignore  BCCDI1_SPARKXT2.PPD  README.md  app.py  app_logging.py  gpu_halftone.py  halftone.py  inkcalc.py  native_backend.py  newcalc.py  plate_bits.py  ppd_profiles.py  requirements.txt  rip_core.py  run_app.bat  test_halftone.py  test_inkcalc.py  test_native_backend.py  test_plate_bits.py  test_ppd_profiles.py  test_preview_scale.py  test_rip_core.py  Калькулатор этикетки.xlsx
native/: CMakeLists.txt  README.md  build_native.ps1  rip_core_native.cpp  rip_core_native.h  rip_core_native.lib
scripts/: run_tests.ps1  run_tests.py
